# schooltest

./: .coverage  .pre-commit-config.yaml  log.py  log.txt  mypytest.py  pyproject.toml  test.py
builddir/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
builddir/.doctrees/: environment.pickle  index.doctree
builddir/_static/: documentation_options.js
docs/: conf.py  index.rst
tests/: test_titanic.py
titanic/: titanic.py
