[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Jason van Hamond <232567@buas.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
scikit-learn = {version = "^1.5.0", extras = ["mypy"]}
black = "^24.4.2"
isort = "^5.13.2"
flake8 = "^7.0.0"
sphinx = "^7.3.7"
sphinx-autobuild = "^2024.4.16"
sphinx-rtd-theme = "^2.0.0"
mypy = "^1.10.0"
stubs = "^1.0.0"
pandas-stubs = "^2.2.2.240514"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
